Update support location information in index.html

--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -94,7 +94,7 @@
                 <div class="support-card">
                     <i class="fas fa-map-marker-alt support-icon"></i>
                     <h3 class="support-title">Ubicación</h3>
-                    <p class="support-info">25VM+C34, Santiago de Cuba, Cuba</p>
+                    <p class="support-info">Dirección: Patricio Lumumba s/n, Santiago de Cuba, Santiago de Cuba, Cuba.</p>
                 </div>
                 <div class="support-card">
                     <i class="fas fa-hashtag support-icon"></i>
